reorder links and sync submodules in install config

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -1,7 +1,9 @@
 - clean: ['~']
 
 - link:
-    ~/.zshrc: zshrc
+    #~/.gitconfig:
+    ~/.zshrc:
     ~/.password-store: pass
 
-
+- shell:
+    - git submodule sync --recursive
