--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -4,6 +4,7 @@
     #~/.gitconfig:
     ~/.zshrc:
     ~/.password-store: pass
+    ~/.oh-my-zsh/custom: oh-my-zsh_custom
 
 - shell:
     - git submodule sync --recursive
