--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,12 @@
 [submodule "pass"]
 	path = pass
 	url = https://github.com/gparrello/pass
+[submodule "oh-my-zsh_custom/plugins/fzf-zsh-plugin"]
+	path = oh-my-zsh_custom/plugins/fzf-zsh-plugin
+	url = git@github.com:unixorn/fzf-zsh-plugin.git
+[submodule "oh-my-zsh_custom/plugins/zsh-autosuggestions"]
+	path = oh-my-zsh_custom/plugins/zsh-autosuggestions
+	url = git@github.com:zsh-users/zsh-autosuggestions.git
+[submodule "oh-my-zsh_custom/plugins/zsh-syntax-highlighting"]
+	path = oh-my-zsh_custom/plugins/zsh-syntax-highlighting
+	url = git@github.com:zsh-users/zsh-syntax-highlighting.git
