fix install ohmyzsh

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -8,7 +8,7 @@
 - shell:
     - [git submodule sync --recursive, Update submodules]
     -
-      command: sh <(wget -O- https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh -O -)
+      command: sh -c "$(wget https://raw.github.com/ohmyzsh/ohmyzsh/master/tools/install.sh -O -)"
       stdout: true
       stderr: true
       description: install Oh My Zsh
