--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -7,6 +7,7 @@
 
 - shell:
     - [git submodule sync --recursive, Update submodules]
+    - [sudo apt get install zsh, Install ZSH]
     -
       command: sh -c "$(wget https://raw.github.com/ohmyzsh/ohmyzsh/master/tools/install.sh -O -)"
       stdout: true
