--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -3,13 +3,15 @@
 - shell:
     - [git submodule sync --recursive, Installing submodules]
     - [sudo apt get install zsh, Installing ZSH]
-    -
-      command: sh -c "$(wget https://raw.github.com/ohmyzsh/ohmyzsh/master/tools/install.sh -O -)"
-      stdout: true
-      stderr: true
-      description: install Oh My Zsh
 
 - link:
     #~/.gitconfig:
     ~/.zshrc:
     ~/.password-store: pass
+
+- shell:
+    -
+      command: sh -c "$(wget https://raw.github.com/ohmyzsh/ohmyzsh/master/tools/install.sh -O -)"
+      stdout: true
+      stderr: true
+      description: install Oh My Zsh
