fix apt command

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -2,7 +2,7 @@
 
 - shell:
     - [git submodule sync --recursive, Installing submodules]
-    - [sudo apt get install zsh, Installing ZSH]
+    - [sudo apt install zsh, Installing ZSH]
 
 - link:
     #~/.gitconfig:
