--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -3,7 +3,8 @@
 - shell:
     - [git submodule sync --recursive, Installing submodules]
     - [sudo apt install "$(cat apt-packages)", Installing packages]
-    - [sh -c "$(wget https://raw.github.com/ohmyzsh/ohmyzsh/master/tools/install.sh -O -)", Installing OhMyZsh]
+    - [sh -c "$(wget -nv -O - https://raw.github.com/ohmyzsh/ohmyzsh/master/tools/install.sh)", Installing OhMyZsh]
+    - [sudo sh -c "$(wget -nv -O - "https://download.calibre-ebook.com/linux-installer.sh")", Installing Calibre]
 
 - link:
     #~/.gitconfig:
