--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -2,7 +2,11 @@
 
 - shell:
     - [git submodule sync --recursive, Installing submodules]
-    - [sudo apt install "$(cat apt-packages)" -y, Installing packages]
+    -
+      command: sudo apt install "$(cat apt-packages)" -y
+      description: Installing packages
+      stderr: true
+      stdout: true
     - [sh -c "$(wget -nv -O - https://raw.github.com/ohmyzsh/ohmyzsh/master/tools/install.sh)", Installing OhMyZsh]
     - [sudo sh -c "$(wget -nv -O - "https://download.calibre-ebook.com/linux-installer.sh")", Installing Calibre]
 
