add execute commands in folder

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -7,6 +7,11 @@
       description: Installing packages
       stderr: true
       stdout: true
+    -
+      command: ls commands | xargs sh
+      description: Executing all commands
+      stderr: true
+
     - [sh -c "$(wget -nv -O - https://raw.github.com/ohmyzsh/ohmyzsh/master/tools/install.sh)", Installing OhMyZsh]
     - [sudo sh -c "$(wget -nv -O - "https://download.calibre-ebook.com/linux-installer.sh")", Installing Calibre]
 
