--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -5,11 +5,9 @@
     -
       command: xargs -a apt-packages sudo apt install -y
       description: Installing packages
-      stderr: true
     -
-      command: find commands -print0 | xargs -0r sh
-      description: Executing all commands
-      stderr: true
+      command: find scripts -print0 | xargs -0r sh
+      description: Executing commands
 
 - link:
     #~/.gitconfig:
