--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -12,7 +12,9 @@
 - link:
     #~/.gitconfig:
     ~/.zshrc:
+      path: zshrc
       force: true
     ~/.password-store: pass
-    ~/.oh-my-zsh/custom: oh-my-zsh_custom
+    ~/.oh-my-zsh/custom:
+      path: oh-my-zsh_custom
       force: true
