--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -15,6 +15,4 @@
       path: zshrc
       force: true
     ~/.password-store: pass
-    ~/.oh-my-zsh/custom:
-      path: oh-my-zsh_custom
-      force: true
+    ~/.oh-my-zsh/custom: oh-my-zsh_custom
