--- a/.gitmodules
+++ b/.gitmodules
@@ -11,3 +11,6 @@
 [submodule "oh-my-zsh_custom/plugins/zsh-syntax-highlighting"]
 	path = oh-my-zsh/plugins/zsh-syntax-highlighting
 	url = git@github.com:zsh-users/zsh-syntax-highlighting.git
+[submodule "pass"]
+	path = pass
+	url = git@github.com:gparrello/pass.git
