enable error output

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -5,14 +5,15 @@
     -
       command: xargs -a apt-packages sudo apt install -y
       description: Installing packages
+      stderr: true
     -
       command: find scripts -iname "*.sh" -print0 | xargs -0r sh
       description: Executing commands
+      stderr: true
     -
       command: sudo usermod -s $(which zsh) $USER
       description: Making zsh the default shell
       stderr: true
-      sdtout: true
 
 - link:
     #~/.gitconfig:
