--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: |
-          mkdir -p ~/dotfiles-install-dir
-      - run: |
-          HOME=~/dotfiles-install-dir ./install
+      - run: mkdir -p ~/dotfiles-install-dir && HOME=~/dotfiles-install-dir ./install
+        name: Build
