--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -7,7 +7,7 @@
       description: Installing packages
       stderr: true
     -
-      command: xargs -n 1 -a packages/snap_classic sudo snap install --classic
+      command: xargs -n 1 -a packages/snap sudo snap install --classic
       description: Installing packages
       stderr: true
     -
