--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -2,11 +2,7 @@
 
 - shell:
     - [git submodule sync --recursive, Installing submodules]
-    -
-      command: find scripts -iname "*.sh" -print0 | xargs -0r sh
-      description: Executing scripts
-      stderr: true
-      stdout: true
+    - [sudo apt update, Updating apt packages lists]
     -
       command: xargs -a packages/apt sudo apt install -y
       description: Installing apt packages
@@ -15,6 +11,11 @@
       command: xargs -n 1 -a packages/snap sudo snap install --classic
       description: Installing snap packages
       stderr: true
+    -
+      command: find scripts -iname "*.sh" -print0 | xargs -0r sh
+      description: Executing scripts
+      stderr: true
+      stdout: true
 
 - link:
     #~/.gitconfig:
