--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -12,7 +12,7 @@
       description: Installing snap packages
       stderr: true
     -
-      command: find scripts -iname "*.sh" -print0 | xargs -0r sh
+      command: find scripts -iname "*.sh" -print0 | xargs -n 1 -0r sh
       description: Executing scripts
       stderr: true
       stdout: true
