add kubectx and kubens commands

--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,6 @@
 [submodule "pass"]
 	path = pass
 	url = git@github.com:gparrello/pass.git
+[submodule "apps/kubectx"]
+	path = apps/kubectx
+	url = https://github.com/ahmetb/kubectx
