--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -24,6 +24,9 @@
       force: true
     ~/.password-store: pass
     ~/.oh-my-zsh/custom:
-      path: oh-my-zsh
+      path: oh-my-zsh/custom
+      force: true
+    ~/.oh-my-zsh/completions:
+      path: oh-my-zsh/completions
       force: true
     ~/.local/bin: bin
