--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -29,4 +29,6 @@
     ~/.oh-my-zsh/completions:
       path: oh-my-zsh/completions
       force: true
-    ~/.local/bin: bin
+    ~/.local/bin:
+      path: bin
+      force: true
