--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -24,8 +24,9 @@
       force: true
     ~/.password-store: pass
     ~/.oh-my-zsh/*:
-      path: oh-my-zsh/
+      path: oh-my-zsh/*
       force: true
+      glob: true
     ~/.local/bin:
       path: bin
       force: true
