fix CI step names

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ jobs:
         name: Build commands
       - uses: actions/checkout@v2
       - run: mkdir -p ~/dotfiles-install-dir && HOME=~/dotfiles-install-dir ./install --only links
-        name: Build
+        name: Build links
       - uses: actions/checkout@v2
       - run: mkdir -p ~/dotfiles-install-dir && HOME=~/dotfiles-install-dir ./install
-        name: Build
+        name: Build all
