--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Build commands
-      - run: mkdir -p ~/dotfiles-install-dir && HOME=~/dotfiles-install-dir ./install --only shell
+        run: mkdir -p ~/dotfiles-install-dir && HOME=~/dotfiles-install-dir ./install --only shell
 
   build-links:
     name: Build Links
