--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -22,7 +22,5 @@
       path: zshrc
       force: true
     ~/.password-store: pass
-    ~/.oh-my-zsh/:
-      path: oh-my-zsh/*
-      force: true
-      glob: true
+    ~/.oh-my-zsh/completions:
+      path: oh-my-zsh/completions
